# certbot-dns-oraclecloud

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  prek.toml  pyproject.toml  zensical.toml
.github/workflows/: ci.yml  docs.yml
.planning/tmp/: docs-work-manifest.json
.superpowers/sdd/: task-4-report.md
docs/: ARCHITECTURE.md  CONFIGURATION.md  GETTING-STARTED.md  TESTING.md  authentication.md  changelog.md  development.md  iam.md  index.md  installation.md
docs/superpowers/plans/: 2026-07-12-certbot-dns-oraclecloud.md
docs/superpowers/specs/: 2026-07-12-certbot-dns-oraclecloud-design.md
scripts/: verify-python314-wheel.sh
src/certbot_dns_oraclecloud/: __init__.py
src/certbot_dns_oraclecloud/_internal/: __init__.py  auth.py  dns_client.py  dns_oraclecloud.py  protocols.py
tests/: __init__.py  test_auth.py  test_distribution.py  test_dns_client.py  test_dns_oraclecloud.py  test_protocols.py  test_quality_config.py
