[build-system]
requires = ["hatchling>=1.31.0"]
build-backend = "hatchling.build"

[project]
name = "certbot-dns-oraclecloud"
version = "0.1.0"
description = "Certbot DNS authenticator for Oracle Cloud Infrastructure DNS"
readme = "README.md"
requires-python = ">=3.10"
license = "UPL-1.0"
authors = [{ name = "Avi Miller", email = "me@dje.li" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Plugins",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: Universal Permissive License (UPL)",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Security",
  "Topic :: System :: Systems Administration",
]
dependencies = [
  "certbot>=5.6.0",
  "oci>=2.181.1",
]

[dependency-groups]
dev = [
  "build>=1.5.1",
  "mypy>=2.2.0",
  "pytest>=9.1.1",
  "pytest-cov>=7.1.0",
  "ruff>=0.15.21",
  "twine>=6.2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/certbot_dns_oraclecloud"]

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["certbot_dns_oraclecloud"]

[tool.coverage.report]
fail_under = 95
show_missing = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.10"
strict = true
files = ["src"]

[[tool.mypy.overrides]]
module = ["oci", "oci.*"]
ignore_missing_imports = true
